--- a/src/styles.css
+++ b/src/styles.css
@@ -19,7 +19,7 @@ html,body{
 #content{
     display: grid;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows:auto auto auto;
+    grid-template-rows:0.5fr 4fr auto;
     height: 100%;
 }
 
@@ -63,7 +63,7 @@ html,body{
     border: none;
     border-radius: 0.5rem;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
+    cursor: pointer;
 }
 
 .menuButton.active {
@@ -90,9 +90,7 @@ html,body{
     justify-content: center;
     gap:3rem;
     padding: 2rem;
-
-
-    
+   
 }
 .textInBody, .priceInBody{
     margin: 0rem;
@@ -142,13 +140,39 @@ html,body{
     font-size: 3rem;
     font-weight: 600;
     display: flex;
-    justify-content: flex-start;
+    justify-content:center;
+    align-items: center;
     margin: 0;
-    padding: 0.5rem;
+    padding: 0.8rem;
 }
-.textInBody{
+.textInBodyMenu{
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 0.5rem;
+}
+
+.titleMenu{
+    font-size: 5rem;
+    font-weight: 600;
+    color:white;
+    background-color: rgb(140, 100, 44);
+    padding: 1rem 6rem 1rem 6rem;
+    border-radius: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.galleryGridContainer{
+    display:grid ;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 0.5rem;
+
+}
+
+.galleryGridCell{
+    width: 20rem;
+    max-height: 20rem;
+    border-radius: 1rem;
 }
